--- a/datatable-noRWD.html
+++ b/datatable-noRWD.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 
     <!-- 網址縮圖 -->
-    <meta property="og：url" content="#" />
-    <meta property="og：type" content="website" />
-    <meta property="og：title" content="#" />
-    <meta property="og：description" content="#" />
-    <meta property="og：image" content="images/share.jpg" />
+    <meta property="og:url" content="#" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="#" />
+    <meta property="og:description" content="#" />
+    <meta property="og:image" content="images/share.jpg" />
     <meta name="description" content="#" />
 
     <!-- 引用bs的css (CDN) -->
