--- a/ideaDepots-add-001.html
+++ b/ideaDepots-add-001.html
@@ -104,16 +104,16 @@
                 aria-labelledby="navbarDropdown"
               >
                 <li>
-                  <a class="dropdown-item" href="#">專案支出</a>
+                  <a class="dropdown-item mb-1" href="#">專案支出</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">管銷費用</a>
+                  <a class="dropdown-item mb-1" href="#">管銷費用</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">分析報告</a>
+                  <a class="dropdown-item mb-1" href="#">分析報告</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">帳號設定</a>
+                  <a class="dropdown-item mb-1" href="#">帳號設定</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="#">業績報表</a>
@@ -143,12 +143,12 @@
                 aria-labelledby="navbarDropdown"
               >
                 <li>
-                  <a class="dropdown-item" href="#">
+                  <a class="dropdown-item mb-1" href="#">
                     <i class="fa-regular fa-user me-2"></i>個人資料
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">
+                  <a class="dropdown-item mb-1" href="#">
                     <i class="fa-solid fa-location-dot me-2"></i>我要打卡
                   </a>
                 </li>
@@ -173,7 +173,7 @@
       </a>
       <!-- Breadcrumb -->
       <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
-        <ol class="breadcrumb py-5">
+        <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">
             SUS Zenpad主視覺設計主主視覺設計
@@ -182,7 +182,7 @@
       </nav>
 
       <div
-        class="d-flex w-100 border-bottom border-secondary align-items-center pb-3"
+        class="d-flex w-100 border-bottom border-secondary align-items-center pb-3 mb-4"
       >
         <p class="fs-4 fw-bold">ASUS Zenpad主視覺設計主主視覺設計</p>
         <!-- 編輯icon -->
@@ -201,7 +201,7 @@
       </div>
       <!-- <p class="border-bottom border-secondary pb-3 fs-4 fw-bold">新增知識庫</p> -->
 
-      <div class="container mt-4">
+      <form class="container">
         <div class="row">
           <div class="col-md-4">
             <div class="row mb-3">
@@ -267,8 +267,7 @@
             <div class="row mb-3">
               <label for="option1" class="col-sm-4 col-form-label">說明</label>
               <div class="col-sm-8">
-                ASUS Zenpad主視覺設計SUS Zenpad主主視覺設計SUS Z主視覺設計SUS
-                Z主視覺設計SUS Z主視覺設計SUS Z
+                ASUS Zenpad主視覺設計主視覺設計主視覺設計主視覺設計主視覺設計
               </div>
             </div>
 
@@ -327,7 +326,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </form>
 
       <!-- btn -->
       <div class="container mt-5">
