--- a/ideaDepots-add.html
+++ b/ideaDepots-add.html
@@ -104,16 +104,16 @@
                 aria-labelledby="navbarDropdown"
               >
                 <li>
-                  <a class="dropdown-item" href="#">專案支出</a>
+                  <a class="dropdown-item mb-1" href="#">專案支出</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">管銷費用</a>
+                  <a class="dropdown-item mb-1" href="#">管銷費用</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">分析報告</a>
+                  <a class="dropdown-item mb-1" href="#">分析報告</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">帳號設定</a>
+                  <a class="dropdown-item mb-1" href="#">帳號設定</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="#">業績報表</a>
@@ -143,12 +143,12 @@
                 aria-labelledby="navbarDropdown"
               >
                 <li>
-                  <a class="dropdown-item" href="#">
+                  <a class="dropdown-item mb-1" href="#">
                     <i class="fa-regular fa-user me-2"></i>個人資料
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">
+                  <a class="dropdown-item mb-1" href="#">
                     <i class="fa-solid fa-location-dot me-2"></i>我要打卡
                   </a>
                 </li>
@@ -177,7 +177,7 @@
 
       <p class="border-bottom border-secondary pb-3 fs-4 fw-bold">新增知識庫</p>
 
-      <div class="container mt-4">
+      <form class="container mt-4">
         <div class="row">
           <div class="col-md-4">
             <div class="row mb-3">
@@ -288,7 +288,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </form>
 
       <!-- btn -->
       <div class="container mt-5">
