--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
   <body>
     <!-- Header -->
     <nav
-      class="navbar navbar-expand-lg navbar-light bg-light border-bottom fs-14"
+      class="navbar navbar-expand-lg navbar-light bg-light border-bottom fs-14 px-1 px-md-2 "
     >
       <div class="container-fluid">
-        <a class="navbar-brand ab-logo-wrapper ms-md-1" href="#">
+        <a class="navbar-brand ab-logo-wrapper" href="#">
           <img src="images/logo.svg" alt="" class="w-100" />
         </a>
 
@@ -104,16 +104,16 @@
                 aria-labelledby="navbarDropdown"
               >
                 <li>
-                  <a class="dropdown-item" href="#">專案支出</a>
+                  <a class="dropdown-item mb-1" href="#">專案支出</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">管銷費用</a>
+                  <a class="dropdown-item mb-1" href="#">管銷費用</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">分析報告</a>
+                  <a class="dropdown-item mb-1" href="#">分析報告</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">帳號設定</a>
+                  <a class="dropdown-item mb-1" href="#">帳號設定</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="#">業績報表</a>
@@ -143,12 +143,12 @@
                 aria-labelledby="navbarDropdown"
               >
                 <li>
-                  <a class="dropdown-item" href="#">
+                  <a class="dropdown-item mb-1" href="#">
                     <i class="fa-regular fa-user me-2"></i>個人資料
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">
+                  <a class="dropdown-item mb-1" href="#">
                     <i class="fa-solid fa-location-dot me-2"></i>我要打卡
                   </a>
                 </li>
@@ -167,6 +167,7 @@
 
     <!-- 主要內容區域 -->
     <div class="container-fluid mt-4 wrapper">
+      <!-- search  bar -->
       <div class="input-group mb-3">
         <!-- 左邊的輸入框 -->
         <input type="text" class="form-control rounded me-2" placeholder="請輸入搜尋內容...">
