--- a/project-add-backup.html
+++ b/project-add-backup.html
@@ -22,6 +22,9 @@
       crossorigin="anonymous"
     />
 
+    <!-- 引用bs5.2.2 (local自行放） -->
+    <!-- <link rel="stylesheet" href="bootstrap-5.2.2-dist/css/bootstrap.min.css" /> -->
+
     <!-- 引用font awesome 6.2.1  -->
     <link rel="stylesheet" href="fontawesome-free-6.2.1-web/css/all.css" />
     <!-- 引bs-icon -->
@@ -46,11 +49,11 @@
   <body>
     <!-- Header -->
     <nav
-      class="navbar navbar-expand-lg navbar-light bg-light border-bottom fs-14 px-1 px-md-2"
+      class="navbar navbar-expand-lg navbar-light bg-light border-bottom fs-14"
     >
       <div class="container-fluid">
-        <a class="navbar-brand ab-logo-wrapper" href="#">
-          <img src="images/logo.svg" alt="" class="w-100" />
+        <a class="navbar-brand ab-logo-wrapper ms-md-1" href="index.html">
+          <img src="images/logo.svg" alt="" class=" " />
         </a>
 
         <button
@@ -118,10 +121,10 @@
               </ul>
             </li>
             <!-- <li class="nav-item">
-           <div class="rounded-avatar-container">
-             <img src="images/dog.png" alt="" >
-           </div>
-         </li> -->
+              <div class="rounded-avatar-container">
+                <img src="images/dog.png" alt="" >
+              </div>
+            </li> -->
             <!-- 大頭貼下拉選單 -->
             <li class="nav-item dropdown">
               <div
@@ -175,36 +178,6 @@
         </ol>
       </nav>
 
-      <!-- alert -->
-      <!-- <div class="alert  alert-success d-flex align-items-center p-0" role="alert">
-        <svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
-        </svg>
-        <div class="ms-2">
-          <p class="m-2">新增專案成功！</p>
-        </div>
-      </div> -->
-
-      <!-- alert -->
-      <div class="alert alert-success d-flex align-items-center" role="alert">
-        <div class="alert-link d-flex align-items-center">
-          <svg
-            class="me-2"
-            xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
-            fill="currentColor"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
-            ></path>
-          </svg>
-        </div>
-        <div class="alert-link">新增專案成功！</div>
-      </div>
-
-      <!-- title -->
       <p class="border-bottom border-secondary pb-3 fs-4 fw-bold">
         新增專案專案資料
       </p>
@@ -215,8 +188,8 @@
             <div class="row gx-5 gy-3">
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">專案號碼</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">專案號碼</label>
+                  <div class="col-md-9">
                     <input
                       type=""
                       class="form-control"
@@ -228,8 +201,8 @@
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">專案類型</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">專案類型</label>
+                  <div class="col-md-9">
                     <select class="form-control" id="">
                       <option>公司專案</option>
                       <option>其他參考</option>
@@ -239,34 +212,21 @@
               </div>
               <div class="col-md-12">
                 <div class="row d-flex">
-                  <label for="" class="col-form-label col-md-1">專案名稱</label>
-                  <div class="col-md-11">
+                  <label for="" class="col-form-label col-md-3">專案名稱</label>
+                  <div class="col-md-9">
                     <input
                       type=""
                       class="form-control"
                       id=""
-                      placeholder="ASUS Zenpad主視覺設計主主視覺設ASUS Zenpad主視覺設計主主視覺設"
+                      placeholder="ASUS Zenpad主視覺設計主設計主主視覺設"
                     />
                   </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-form-label col-md-2">客戶名稱</label>
-                  <div class="col-md-10">
-                    <input
-                      type=""
-                      class="form-control"
-                      id=""
-                      placeholder="隨打即找"
-                    />
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">聯繫窗口</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-form-label col-md-3">客戶名稱</label>
+                  <div class="col-md-9">
                     <input
                       type=""
                       class="form-control"
@@ -278,8 +238,21 @@
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">開立日期</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">聯繫窗口</label>
+                  <div class="col-md-9">
+                    <input
+                      type=""
+                      class="form-control"
+                      id=""
+                      placeholder="隨打即找"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="row d-flex">
+                  <label for="" class="col-md-3 col-form-label">開立日期</label>
+                  <div class="col-md-9">
                     <input
                       type="date"
                       class="form-control"
@@ -291,8 +264,8 @@
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">聯絡電話</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">聯絡電話</label>
+                  <div class="col-md-9">
                     <input
                       type=""
                       class="form-control"
@@ -304,8 +277,8 @@
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">分機</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">分機</label>
+                  <div class="col-md-9">
                     <input
                       type=""
                       class="form-control"
@@ -317,8 +290,8 @@
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">E-mail</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">E-mail</label>
+                  <div class="col-md-9">
                     <input
                       type=""
                       class="form-control"
@@ -330,8 +303,8 @@
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">行動電話</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">行動電話</label>
+                  <div class="col-md-9">
                     <input
                       type=""
                       class="form-control"
@@ -343,8 +316,8 @@
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">負責業務</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">負責業務</label>
+                  <div class="col-md-9">
                     <select class="form-control" id="">
                       <option>A</option>
                       <option>B</option>
@@ -354,8 +327,8 @@
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">負責設計</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">負責設計</label>
+                  <div class="col-md-9">
                     <select class="form-control" id="">
                       <option>A</option>
                       <option>B</option>
@@ -365,8 +338,8 @@
               </div>
               <div class="col-md-6">
                 <div class="row d-flex">
-                  <label for="" class="col-md-2 col-form-label">協助設計</label>
-                  <div class="col-md-10">
+                  <label for="" class="col-md-3 col-form-label">協助設計</label>
+                  <div class="col-md-9">
                     <select class="form-control" id="">
                       <option>A</option>
                       <option>B</option>
@@ -437,14 +410,14 @@
           </div>
         </div>
         <!-- 觀看相關照片 -->
-        <!-- <div class="row mb-5">
+        <div class="row mb-5">
           <div class="col-md-6">
             <a href="" class="btn btn-secondary w-100">觀看相關照片</a>
           </div>
-        </div> -->
+        </div>
 
         <!-- 結案資訊 -->
-        <div class="border-top border-secondary mb-5">
+        <div class="border-top border-secondary mb-5 ">
           <p class="pb-3 fs-5 fw-bold pt-3">結案資訊</p>
           <div class="row gx-5 gy-3">
             <div class="col-md-6">
@@ -501,7 +474,7 @@
         </div>
 
         <!-- 發票開立資訊 -->
-        <div class="border-top border-secondary mb-5">
+        <div class="border-top border-secondary mb-5 ">
           <p class="pb-3 fs-5 fw-bold pt-3">發票開立資訊</p>
           <div class="row gx-5 gy-2">
             <div class="col-md-7">
@@ -752,19 +725,18 @@
       </div>
     </footer>
 
-		<!-- jQuery(CDN) -->
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
-			integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		></script>
-		<!-- 引用bs的js (CDN) -->
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-			crossorigin="anonymous"
-		></script>
+    <!-- 引用bs的js (CDN) -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- 一引用navbar的下拉式選單會失效 -->
+    <!-- jq-3.6.0.js & popper.js & bs.js (local自行放） -->
+    <!-- <script type="text/javascript" src="js/jquery-3.6.0.js"></script>
+    <script src="bootstrap-5.2.2-dist/js/popper.min.js"></script>
+    <script src="bootstrap-5.2.2-dist/js/bootstrap.min.js"></script> -->
 
     <script>
       // 取得當前年份
@@ -775,7 +747,7 @@
         "Copyright © " + currentYear + " BORNA";
     </script>
 
-    <!-- 上傳照片+刪除照片 -->
+    <!-- 上傳照片 -->
     <script>
       // 當選擇照片後的事件處理函式
       document
