--- a/ideaDepots-add.html
+++ b/ideaDepots-add.html
@@ -22,8 +22,6 @@
       crossorigin="anonymous"
     />
 
-    <!-- 引用bs5.2.2 (local自行放） -->
-    <!-- <link rel="stylesheet" href="bootstrap-5.2.2-dist/css/bootstrap.min.css" /> -->
 
     <!-- 引用font awesome 6.2.1  -->
     <link rel="stylesheet" href="fontawesome-free-6.2.1-web/css/all.css" />
@@ -307,6 +305,13 @@
       </div>
     </footer>
 
+    <!-- jQuery(CDN) -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+      integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- 引用bs的js (CDN) -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
@@ -314,12 +319,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- 一引用navbar的下拉式選單會失效 -->
-    <!-- jq-3.6.0.js & popper.js & bs.js (local自行放） -->
-    <!-- <script type="text/javascript" src="js/jquery-3.6.0.js"></script>
-    <script src="bootstrap-5.2.2-dist/js/popper.min.js"></script>
-    <script src="bootstrap-5.2.2-dist/js/bootstrap.min.js"></script> -->
-
+    <!-- footer -->
     <script>
       // 取得當前年份
       var currentYear = new Date().getFullYear();
